[package]
name = "photo-date-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.32"
clap = { version = "4.5.53", features = ["derive"] }
image = { version = "0.25.9", features = ["jpeg", "png"] }
imageproc = "0.25.0"
jiff = "0.2.17"
kamadak-exif = "0.6.1"
num_cpus = "1.17.0"
regex = "1.12.2"
thiserror = "2.0.17"
threadpool = "1.8.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
walkdir = "2.5.0"

[features]
emit-progress = []